# polaris-fuego-api

./: .coveragerc  .pre-commit-config.yaml  Dockerfile  README.md  hapi.docker-compose.yaml  pyproject.toml  run_local.sh  tox.ini
.circleci/: config.yml  run_integration_tests.sh
dhos_fuego_api/: app.py  config.py
dhos_fuego_api/blueprint_api/: __init__.py  controller.py
dhos_fuego_api/blueprint_development/: __init__.py  controller.py
dhos_fuego_api/fhir/: auth.py  client.py  error_handler.py  patient_tools.py
dhos_fuego_api/helpers/: cli.py
dhos_fuego_api/models/: api_spec.py  fhir_request.py
dhos_fuego_api/openapi/: openapi.yaml
docs/: make_schema.py  schema.dot  schema.plantuml
integration-tests/: Makefile  README.md  docker-compose.yml  reporting.py  requirements.txt
integration-tests/clients/: fhir_client.py  fuego_client.py
integration-tests/features/: data_drop.feature  patient_search.feature
integration-tests/helpers/: jwt.py
integration-tests/postgres-db/: Dockerfile
integration-tests/steps/: common_steps.py  data_drop_steps.py  patient_create_steps.py  patient_search_steps.py
migrations/versions/: 7303d767d7ad_nullable_request_details.py  9e78cb8974a7_fhir_request.py
tests/: conftest.py  test_api.py  test_controller.py  test_openapi.py
tests/test_fhir/: test_auth.py  test_client.py  test_patient_tools.py
