[tool.poetry]
name = "dhos-fuego-api"
version = "0.0.1"
description = "Polaris Fuego API"
authors = ["Jon Daly <jonathan.daly@sensynehealth.com>"]
keywords = ["FHIR", "HL7", "Fuego", "Polaris"]
repository = "https://github.com/polaris-foundation/polaris-fuego-api"

[tool.poetry.dependencies]
python = "^3.9"
fhirpy = "1.*"
flask-batteries-included = {version = "3.*", extras = ["apispec", "pgsql"]}
she-logging = "1.*"

[tool.poetry.dev-dependencies]
bandit = "*"
black = "*"
coloredlogs = "*"
coverage = "*"
isort = "*"
mock = "*"
mypy = "*"
pytest = "*"
pytest-dhos = {version = "*", extras=["fbi"]}
pytest-flask = "*"
pytest-freezegun = "*"
pytest-mock = "*"
requests_mock = "1.8.*"
sadisplay = "*"
safety = "*"
tox = "*"
types-mock = "*"
types-PyYAML = "*"
types-requests = "*"

[tool.mypy]
namespace_packages=true
ignore_missing_imports=false
disallow_untyped_defs=true

[[tool.mypy.overrides]]
module = [
    "requests_mock",
    "pytest",
    "environs",
    "jose",
    "waitress",
    "connexion",
    "pytest_mock",
    "apispec.*",
    "apispec_webframeworks.*",
    "sadisplay",
    "sqlalchemy.*",
    "flask_sqlalchemy"
]
ignore_missing_imports = true

[tool.isort]
profile = "black"
known_third_party = ["_pytest", "alembic", "apispec", "apispec_webframeworks", "behave", "click", "clients", "connexion", "environs", "faker", "flask", "flask_batteries_included", "flask_sqlalchemy", "helpers", "jose", "marshmallow", "mock", "pytest", "pytest_mock", "reporting", "reportportal_behave", "requests", "requests_mock", "sadisplay", "she_logging", "sqlalchemy", "waitress", "yaml"]

[tool.black]
line-length = 88
target-version = ["py39"]
